Language bumped up to 7.2 to enable all the new struct-related features

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -16,6 +16,7 @@
     <GenerateAssemblyVersionAttribute>true</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>true</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>true</GenerateAssemblyInformationalVersionAttribute>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Schema\SQL\mt_transforms.js" />
