--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -31,8 +31,9 @@
     <EmbeddedResource Include="Schema\SchemaObjects.sql" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Npgsql" Version="4.0.0" />
+    <PackageReference Include="Npgsql.Json.NET" Version="1.0.0" />
     <PackageReference Include="Remotion.Linq" Version="2.1.1" />
     <PackageReference Include="Baseline" Version="1.3.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.7.0" />
