Updated datetime handling

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -18,6 +18,10 @@
     <GenerateAssemblyInformationalVersionAttribute>true</GenerateAssemblyInformationalVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Schema\SQL\mt_immutable_timestamptz.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Schema\SQL\mt_immutable_timestamptz.sql" />
     <EmbeddedResource Include="Schema\SQL\mt_transforms.js" />
     <EmbeddedResource Include="Schema\SQL\mt_patching.js" />
     <EmbeddedResource Include="Schema\SQL\mt_mark_event_progression.sql" />
