--- a/src/Marten.CommandLine/Marten.CommandLine.csproj
+++ b/src/Marten.CommandLine/Marten.CommandLine.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <Description>Command line tooling for managing Marten development</Description>
-    <VersionPrefix>2.10.0</VersionPrefix>
+    <VersionPrefix>3.0.0-alpha-1</VersionPrefix>
     <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
-    <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net46;netstandard2.0;netstandard2.1</TargetFrameworks>
     <AssemblyName>Marten.CommandLine</AssemblyName>
     <PackageId>Marten.CommandLine</PackageId>
     <PackageIconUrl>http://jasperfx.github.io/marten/content/images/emblem.png</PackageIconUrl>
