--- a/src/Marten.CommandLine/Marten.CommandLine.csproj
+++ b/src/Marten.CommandLine/Marten.CommandLine.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <Description>Command line tooling for managing Marten development</Description>
-    <VersionPrefix>3.0.0-alpha-2</VersionPrefix>
-    <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle</Authors>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz</Authors>
     <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
     <AssemblyName>Marten.CommandLine</AssemblyName>
     <PackageId>Marten.CommandLine</PackageId>
