--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
-    <VersionPrefix>3.0.0-alpha-2</VersionPrefix>
-    <Authors>Jeremy D. Miller;Tim Cools;Jeff Doolittle;James Hopper</Authors>
+    <VersionPrefix>3.0.0</VersionPrefix>
+    <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz</Authors>
     <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
     <AssemblyName>Marten</AssemblyName>
     <PackageId>Marten</PackageId>
