Reimplementing full text search on top of the latest code

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -57,7 +57,6 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup Condition="'$(OS)' != 'Windows_NT' AND '$(TargetFramework)'== 'net46'">
-    <PackageReference Include="Microsoft.TargetingPack.NETFramework.v4.6"
-                      Version="1.0.1" ExcludeAssets="All" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.TargetingPack.NETFramework.v4.6" Version="1.0.1" ExcludeAssets="All" PrivateAssets="All" />
   </ItemGroup>
 </Project>
