Switched CI builds to use martenbuild

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ before_script:
   - psql -d marten_test -c 'create extension if not exists plv8;'
 
 script:
-  - rake ci
+  - dotnet run -p martenbuild.csproj -- ci
