--- a/martenbuild.csproj
+++ b/martenbuild.csproj
@@ -12,7 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bullseye" Version="2.1.0" />
-    <PackageReference Include="SimpleExec" Version="3.0.0" />
+    <PackageReference Include="SimpleExec" Version="4.0.0-rc.1" />
     <PackageReference Include="Westwind.Utilities" Version="3.0.20.4" />
   </ItemGroup>
 
