Add SourceLink for Marten libs - fixes GH-1156
- Add SourceLink related settings to Marten and Marten.Commandline
csproj files
- Replace deprecated PackageLicenseUrl with PackageLicenseExpression in
csproj files
- Update AppVeyor config to add .snupkg to artifacts folder
- Add .snupkg to .gitignore

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,4 +38,4 @@ build_script:
 test: off
 
 artifacts:
-  - path: '**\Marten.*.nupkg' # find all NuGet packages recursively
+  - path: '**\Marten.*.*nupkg' # find all NuGet packages recursively
