--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "marten",
-  "version": "0.5.0",
+  "private": true,
   "description": "Javascript Projections",
   "dependencies": {},
   "scripts": {
