--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,8 @@ environment:
   POSTGRES_PATH: C:\Program Files\PostgreSQL\10
   PG_PLV8_EXTENSION_ZIP_FILENAME: pg10plv8jsbin_w64
   PG_DB: marten_test
+  NUGET_DEPLOY_KEY:
+    secure: gcZQodwplC8EyShor3GPKubzIDADyqyM2hfSx2Zb6eHCaCQiNq5A1M/MTPBYgwd2
 
 services: 
   - postgresql101
@@ -40,12 +42,11 @@ artifacts:
 
 deploy:
   provider: NuGet
-  api_key:
-    secure: gcZQodwplC8EyShor3GPKubzIDADyqyM2hfSx2Zb6eHCaCQiNq5A1M/MTPBYgwd2
+  api_key: $(NUGET_DEPLOY_KEY)
   artifact: /.*\.nupkg/
   on:
     APPVEYOR_REPO_TAG: true
 
 # workaround to publish snupkg to NuGet (appveyor is yet to support publishing snupkg)
 after_deploy:
-  - ps: Get-ChildItem -Path *.snupkg -Recurse | % { dotnet nuget push $_.FullName -s https://api.nuget.org/v3/index.json -k $env:NUGET_DEPLOY_SECRET }
+  - ps: Get-ChildItem -Path *.snupkg -Recurse | % { dotnet nuget push $_.FullName -s https://api.nuget.org/v3/index.json -k $env:NUGET_DEPLOY_KEY }
