--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ resources:
       ports:
         - 5432:5432
     - container: pg9.6
-      image: clkao/postgres-plv8:9.6
+      image: mysticmind/postgres-plv8:9.6-1.4
       ports:
         - 5432:5432
 
@@ -31,7 +31,7 @@ variables:
 
 jobs:
   - job: Build
-    timeoutInMinutes: 20
+    # timeoutInMinutes: 20
     pool:
       vmImage: 'ubuntu-latest'
     strategy:
@@ -55,8 +55,9 @@ jobs:
           versionSpec: $(node_version)
       - script: |
           PG_CONTAINER_NAME=$(docker ps --filter expose=5432/tcp --format {{.Names}})
-          docker exec $PG_CONTAINER_NAME psql -U postgres -c 'create database $(pg_db);'
+          docker exec $PG_CONTAINER_NAME psql -U postgres -c "create database $(pg_db);"
           docker exec $PG_CONTAINER_NAME psql -U postgres -d $(pg_db) -c "create extension if not exists plv8;"
+          docker exec $PG_CONTAINER_NAME psql -U postgres -c "DO 'plv8.elog(NOTICE, plv8.version);' LANGUAGE plv8;"
         displayName: Create db and add plv8 extension
       - script: ./build.sh ci
         displayName: Build
