--- a/azure-pipelines-benchmarks.yml
+++ b/azure-pipelines-benchmarks.yml
@@ -56,5 +56,5 @@ jobs:
           docker exec $PG_CONTAINER_NAME psql -U postgres -c "DO 'plv8.elog(NOTICE, plv8.version);' LANGUAGE plv8;"
         displayName: Create db and add plv8 extension
       - script: ./build.sh ci      
-      - script: ./build.sh benchmark
+      - script: ./build.sh benchmarks
         displayName: BuildAndBenchmark
