Added copying artifacts of the benchmarks

--- a/azure-pipelines-benchmarks.yml
+++ b/azure-pipelines-benchmarks.yml
@@ -57,4 +57,13 @@ jobs:
         displayName: Create db and add plv8 extension
       - script: ./build.sh ci      
       - script: ./build.sh benchmarks
+      - powershell: gci env:* | sort-object name | Format-Table -AutoSize | Out-File $env:BUILD_ARTIFACTSTAGINGDIRECTORY/environment-variables.txt
+      - task: CopyBenchmarkResults
+        inputs:
+          sourceFolder: '$(Build.SourcesDirectory)'
+          contents: 'src/MartenBenchmarks/bin/$(BuildConfiguration)/netcoreapp2.1/BenchmarkDotNet.Artifacts/results/?(*.html|*.md|*.csv)'
+      - task: PublishBuildArtifacts@1
+        inputs:
+          pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+          artifactName: drop
         displayName: BuildAndBenchmark
