--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -37,6 +37,7 @@
     <PackageReference Include="NSubstitute" Version="4.2.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="structuremap" Version="4.7.1" />
+    <PackageReference Include="Xunit.SkippableFact" Version="1.3.12" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0' or '$(TargetFramework)' == 'netcoreapp2.1'">
