--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
-        <VersionPrefix>3.5.0</VersionPrefix>
-        <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz</Authors>
+        <VersionPrefix>3.6.0</VersionPrefix>
+        <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz;Joona-Pekka Kokko</Authors>
         <TargetFrameworks>net46;netstandard2.0</TargetFrameworks>
         <AssemblyName>Marten</AssemblyName>
         <PackageId>Marten</PackageId>
