Fix to use bullseye --no-color for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ jobs:
           docker exec $PG_CONTAINER_NAME psql -U postgres -d $(pg_db) -c "create extension if not exists plv8;"
           docker exec $PG_CONTAINER_NAME psql -U postgres -c "DO 'plv8.elog(NOTICE, plv8.version);' LANGUAGE plv8;"
         displayName: Create db and add plv8 extension
-      - script: ./build.sh ci
+      - script: ./build.sh --no-color ci
         displayName: Build
   # Publish job will be enabled later
   # - job: Publish
@@ -73,7 +73,7 @@ jobs:
   #       displayName: Install .Net Core
   #       inputs:
   #         version: $(dotnet_core_version)
-  #     - script: ./build.sh pack
+  #     - script: ./build.sh --no-color pack
   #       displayName: Create NuGet Packages
   #     - task: NuGetCommand@2
   #       displayName: Publish packages to NuGet
