Fix warnings in projects
- Fix System.Transactions related warning in Marten
- Fix xunit related warnings in Marten.Testing
- Suppress warnings for CS0618 in Marten
- Suppress warnings for xUnit1013 and CS0618 in Marten.Testing and
Marten.NodaTime.Testing

--- a/src/Marten.NodaTime.Testing/Marten.NodaTime.Testing.csproj
+++ b/src/Marten.NodaTime.Testing/Marten.NodaTime.Testing.csproj
@@ -20,4 +20,7 @@
     <PackageReference Include="NSubstitute" Version="4.2.0" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
   </ItemGroup>
+  <PropertyGroup>
+    <NoWarn>xUnit1013;CS0618</NoWarn>
+  </PropertyGroup>
 </Project>
