Upgraded packages to the latest versions

--- a/martenbuild.csproj
+++ b/martenbuild.csproj
@@ -11,9 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bullseye" Version="2.4.0-rc.2" />
+    <PackageReference Include="Bullseye" Version="2.4.0" />
     <PackageReference Include="SimpleExec" Version="6.0.0" />
-    <PackageReference Include="Westwind.Utilities" Version="3.0.20.4" />
+    <PackageReference Include="Westwind.Utilities" Version="3.0.29" />
   </ItemGroup>
 
   <ItemGroup>
