--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <!-- Add this repository to the list of available repositories -->
-        <add key="Npgsql" value="https://www.myget.org/F/npgsql/api/v3/index.json" />
+        <!-- Uncomment to use Npgsql prerelease package source 
+        <add key="Npgsql" value="https://www.myget.org/F/npgsql/api/v3/index.json" />-->
     </packageSources>
 </configuration>
