--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,14 +9,14 @@ environment:
   config: Release
   DOTNET_CLI_TELEMETRY_OPTOUT: true
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
-  marten_testing_database: "Host=localhost;Port=5432;Database=marten_test;Username=postgres;Password=Password12!"
+  marten_testing_database: "Host=localhost;Port=5432;Database=marten_testing;Username=postgres;Password=Password12!"
   POSTGRES_PATH: C:\Program Files\PostgreSQL\10
   PG_PLV8_EXTENSION_ZIP_FILENAME: pg10plv8jsbin_w64
-  PG_DB: marten_test
+  PG_DB: marten_testing
   NUGET_DEPLOY_KEY:
     secure: gRYMiyKuH3WEGdrr2b+APdl6BS7lRL3xhl3L/pcyPt2RJnQ0SVrW7hxjk8Qrqkns
 
-services: 
+services:
   - postgresql101
 
 install:
