--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Description>Postgresql as a Document Db and Event Store for .Net Development</Description>
+        <Description>.NET Transactional Document DB and Event Store on PostgreSQL</Description>
         <VersionPrefix>3.11.0</VersionPrefix>
         <Authors>Jeremy D. Miller;Babu Annamalai;Oskar Dudycz;Joona-Pekka Kokko</Authors>
         <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
