updated command line lib to use Oakton.AspNetCore, also updated Baseline. Closes GH-1472

--- a/src/AspNetCoreWithMarten/AspNetCoreWithMarten.csproj
+++ b/src/AspNetCoreWithMarten/AspNetCoreWithMarten.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Marten.CommandLine\Marten.CommandLine.csproj" />
       <ProjectReference Include="..\Marten\Marten.csproj" />
     </ItemGroup>
 
