Using BaselineTypeDiscovery for type scanning. Closes GH-1565

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -36,6 +36,7 @@
         <EmbeddedResource Include="Schema\SchemaObjects.sql" />
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="BaselineTypeDiscovery" Version="1.1.0" />
         <PackageReference Include="LamarCodeGeneration" Version="2.4.0" />
         <PackageReference Include="LamarCompiler" Version="2.3.0" />
         <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
